web-api/deployment/monitoring-service.yml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: prometheus-grafana
    app.kubernetes.io/name: grafana
  ports:
    - name: monitoring-service
      port: 80
      targetPort: 3000
      protocol: TCP
