web-api/deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-api-service
  labels:
    app: ausnews-web-api
spec:
  type: NodePort
  selector:
    app: ausnews-web-api
  ports:
    - name: web-api-service
      port: 80
      targetPort: 8080
      protocol: TCP
